add todo list && react toast

--- a/src/views/App.css
+++ b/src/views/App.css
@@ -27,6 +27,27 @@
 .App-link {
   color: #61dafb;
 }
+.list-todo {
+  width: 400px;
+  margin: 0 auto;
+}
+button.add {
+  margin: 0 10px;
+}
+.todo-child {
+  height: 40px;
+  border-bottom: 1px solid gray;
+  margin: 10px;
+}
+.todo-child:first-child {
+  border-top: 1px solid gray;
+}
+button {
+  cursor: pointer;
+}
+button.edit {
+  margin: 0 10px;
+}
 
 @keyframes App-logo-spin {
   from {
